Update memory and remove obsolete asset file
